add: section search-box

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,13 +16,17 @@
         </div>
     </header>
     <!-- /header -->
-
     <!-- main -->
-    <main>
-        <div class="main-conteiner">
-
+    <main class="main-conteiner">
+        <!-- search-box -->
+        <div>
+            <input class="search-box" type="text" placeholder="es. fare la spesa">
+            <input class="botton-task" type="button" value="Add Task">
         </div>
+        <hr>
+        <!-- /search-box -->
     </main>
     <!-- /main -->
 </body>
+
 </html>
