add: first task list

--- a/index.html
+++ b/index.html
@@ -19,12 +19,23 @@
     <!-- main -->
     <main class="main-conteiner">
         <!-- search-box -->
-        <div>
+        <div class="search-conteiner">
             <input class="search-box" type="text" placeholder="es. fare la spesa">
             <input class="botton-task" type="button" value="Add Task">
         </div>
-        <hr>
         <!-- /search-box -->
+        <hr>
+        <!--list -->
+        
+        <ul class="task-list">
+            <strong>&#10148; TASK PRECEDENTI</strong>
+            <li class="task-conteiner">
+                <span class="check">&check;</span>
+                <span>Querterly Newsletters</span>
+                <span class="tag blu">Editorial</span>
+            </li>
+        </ul>
+        <!--/list -->
     </main>
     <!-- /main -->
 </body>
