feat:completed list

--- a/index.html
+++ b/index.html
@@ -26,12 +26,56 @@
         <!-- /search-box -->
         <hr>
         <!--list -->
-        
         <ul class="task-list">
             <strong>&#10148; TASK PRECEDENTI</strong>
             <li class="task-conteiner">
+                <span class="check ">&check;</span>
+                <span class="done">Querterly Newsletters</span>
+                <span class="tag blu">Editorial</span>
+            </li>
+        </ul>
+        <ul class="task-list">
+            <strong>&#10148; OGGI</strong>
+            <li class="task-conteiner">
                 <span class="check">&check;</span>
-                <span>Querterly Newsletters</span>
+                <span class="done">Recruting blog post</span>
+                <span class="tag blu">Editorial</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="check ">&check;</span>
+                <span class="done">Mobile app luanch</span>
+                <span class="tag purple">Q1 Goals</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="cross">&cross;</span>
+                <span>Interview John H.</span>
+                <span class="tag green">Recruting</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="check ">&check;</span>
+                <span class="done">Summit update to mobile storefronts</span>
+                <span class="tag orange">Mobile</span>
+            </li>
+        </ul>
+        <ul class="task-list">
+            <strong>&#10148; PROSSIMI GIORNI</strong>
+            <li class="task-conteiner">
+                <span class="cross">&cross;</span>
+                <span>Schedule meeting with Alex</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="check ">&check;</span>
+                <span class="done">Homepage refresh</span>
+                <span class="tag pink">Website</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="check ">&check;</span>
+                <span class="done">Onboard new sales team members</span>
+                <span class="tag green2">Sales</span>
+            </li>
+            <li class="task-conteiner">
+                <span class="check">&check;</span>
+                <span class="done">Review editorial calendar</span>
                 <span class="tag blu">Editorial</span>
             </li>
         </ul>
