add:correzione esercizio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <hr>
         <!--list -->
         <ul class="task-list">
-            <strong>&#10148; TASK PRECEDENTI</strong>
+            <li><strong>&#10148; TASK PRECEDENTI</strong></li>
             <li class="task-conteiner">
                 <span class="check ">&check;</span>
                 <span class="done">Querterly Newsletters</span>
@@ -35,7 +35,7 @@
             </li>
         </ul>
         <ul class="task-list">
-            <strong>&#10148; OGGI</strong>
+            <li><strong>&#10148; OGGI</strong></li>
             <li class="task-conteiner">
                 <span class="check">&check;</span>
                 <span class="done">Recruting blog post</span>
@@ -58,7 +58,7 @@
             </li>
         </ul>
         <ul class="task-list">
-            <strong>&#10148; PROSSIMI GIORNI</strong>
+            <li><strong>&#10148; PROSSIMI GIORNI</strong></li>
             <li class="task-conteiner">
                 <span class="cross">&cross;</span>
                 <span>Schedule meeting with Alex</span>
